--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f888f6">  <td>25/01/26 12:18:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testngdemo.loginTest()[pri:0, instance:learnTestNG.testngdemo@3349e9bb]">loginTest</td> 
+<tr bgcolor="f888f6">  <td>25/01/31 16:34:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;checkingtitle.end()[pri:0, instance:browserscripts.checkingtitle@65fb9ffc]">&lt;&lt;end</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/01/31 16:34:11</td>   <td>-6173</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;checkingtitle.setup()[pri:0, instance:browserscripts.checkingtitle@65fb9ffc]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/01/31 16:34:14</td>   <td>-3644</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="checkingtitle.testGoogle()[pri:0, instance:browserscripts.checkingtitle@65fb9ffc]">testGoogle</td> 
   <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/01/26 12:18:40</td>   <td>14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="testngdemo.logouttest()[pri:0, instance:learnTestNG.testngdemo@3349e9bb]">logouttest</td> 
-  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/01/26 12:18:40</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testngdemo.setup()[pri:0, instance:learnTestNG.testngdemo@3349e9bb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/01/26 12:18:40</td>   <td>13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;testngdemo.setup()[pri:0, instance:learnTestNG.testngdemo@3349e9bb]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/01/26 12:18:40</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testngdemo.teardown()[pri:0, instance:learnTestNG.testngdemo@3349e9bb]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/01/26 12:18:40</td>   <td>19</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;testngdemo.teardown()[pri:0, instance:learnTestNG.testngdemo@3349e9bb]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
 </table>
