--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f888f6">  <td>25/01/31 16:34:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;checkingtitle.setup()[pri:0, instance:browserscripts.checkingtitle@65fb9ffc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/01/31 16:34:14</td>   <td>2529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="checkingtitle.testGoogle()[pri:0, instance:browserscripts.checkingtitle@65fb9ffc]">testGoogle</td> 
-  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/01/31 16:34:17</td>   <td>6173</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;checkingtitle.end()[pri:0, instance:browserscripts.checkingtitle@65fb9ffc]">&lt;&lt;end</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
+  <td>TestNG-methods-1@2129144075</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
+  <td>TestNG-methods-1@2129144075</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
+  <td>TestNG-methods-2@504858437</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
+  <td>TestNG-methods-1@2129144075</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
+  <td>TestNG-methods-2@504858437</td>   <td></td> </tr>
 </table>
