--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\gajan\AppData\Local\Temp\testng-eclipse--2120304165\testng-customsuite.xml</span>
+                    <span>C:\Users\gajan\AppData\Local\Temp\testng-eclipse--827436305\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">5 methods,   5 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,27 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="browserscripts.ThreadPooling" class="method navigator-link" hash-for-method="executeTest">executeTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="learnTestNG.AnnotationsLearn" class="method navigator-link" hash-for-method="testCase1">testCase1</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="browserscripts.ThreadPooling" class="method navigator-link" hash-for-method="executeTest">executeTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="browserscripts.ThreadPooling" class="method navigator-link" hash-for-method="executeTest">executeTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="browserscripts.ThreadPooling" class="method navigator-link" hash-for-method="executeTest">executeTest</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="browserscripts.ThreadPooling" class="method navigator-link" hash-for-method="executeTest">executeTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="learnTestNG.AnnotationsLearn" class="method navigator-link" hash-for-method="testCase2">testCase2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -141,42 +126,21 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">browserscripts.ThreadPooling</span>
+              <span class="class-name">learnTestNG.AnnotationsLearn</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="executeTest">
-                  </a> <!-- executeTest -->
-                  <span class="method-name">executeTest</span>
+                  <a name="testCase1">
+                  </a> <!-- testCase1 -->
+                  <span class="method-name">testCase1</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="executeTest">
-                  </a> <!-- executeTest -->
-                  <span class="method-name">executeTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="executeTest">
-                  </a> <!-- executeTest -->
-                  <span class="method-name">executeTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="executeTest">
-                  </a> <!-- executeTest -->
-                  <span class="method-name">executeTest</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="executeTest">
-                  </a> <!-- executeTest -->
-                  <span class="method-name">executeTest</span>
+                  <a name="testCase2">
+                  </a> <!-- testCase2 -->
+                  <span class="method-name">testCase2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -184,7 +148,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\gajan\AppData\Local\Temp\testng-eclipse--2120304165\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\gajan\AppData\Local\Temp\testng-eclipse--827436305\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -193,7 +157,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;browserscripts.ThreadPooling&quot;/&gt;
+      &lt;class name=&quot;learnTestNG.AnnotationsLearn&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -233,32 +197,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(5);
+data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'executeTest')
-data.setCell(0, 2, 'browserscripts.ThreadPooling')
-data.setCell(0, 3, 20);
+data.setCell(0, 1, 'testCase1')
+data.setCell(0, 2, 'learnTestNG.AnnotationsLearn')
+data.setCell(0, 3, 6);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'executeTest')
-data.setCell(1, 2, 'browserscripts.ThreadPooling')
-data.setCell(1, 3, 19);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'executeTest')
-data.setCell(2, 2, 'browserscripts.ThreadPooling')
-data.setCell(2, 3, 3);
-data.setCell(3, 0, 3)
-data.setCell(3, 1, 'executeTest')
-data.setCell(3, 2, 'browserscripts.ThreadPooling')
-data.setCell(3, 3, 3);
-data.setCell(4, 0, 4)
-data.setCell(4, 1, 'executeTest')
-data.setCell(4, 2, 'browserscripts.ThreadPooling')
-data.setCell(4, 3, 1);
+data.setCell(1, 1, 'testCase2')
+data.setCell(1, 2, 'learnTestNG.AnnotationsLearn')
+data.setCell(1, 3, 2);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 46 ms</span>
+              <span class="suite-total-time">Total running time: 8 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -284,27 +236,55 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">browserscripts.ThreadPooling</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">executeTest</span>
+              <div class="chronological-class-name">learnTestNG.AnnotationsLearn</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">beforeSuite</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- test-method -->
+              </div> <!-- configuration-suite before -->
+              <div class="configuration-test before">
+                <span class="method-name">beforeTest</span>
+                <span class="method-start">24 ms</span>
+              </div> <!-- configuration-test before -->
+              <div class="configuration-class before">
+                <span class="method-name">beforeClass</span>
+                <span class="method-start">39 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">47 ms</span>
+              </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">executeTest</span>
-                <span class="method-start">0 ms</span>
+                <span class="method-name">testCase1</span>
+                <span class="method-start">48 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">57 ms</span>
+              </div> <!-- configuration-method after -->
               <div class="test-method">
-                <span class="method-name">executeTest</span>
-                <span class="method-start">27 ms</span>
+                <span class="method-name">testCase2</span>
+                <span class="method-start">58 ms</span>
               </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">executeTest</span>
-                <span class="method-start">28 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">executeTest</span>
-                <span class="method-start">33 ms</span>
-              </div> <!-- test-method -->
+              <div class="configuration-method before">
+                <span class="method-name">beforeMethod</span>
+                <span class="method-start">58 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="configuration-method after">
+                <span class="method-name">afterMethod</span>
+                <span class="method-start">61 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-class after">
+                <span class="method-name">afterClass</span>
+                <span class="method-start">62 ms</span>
+              </div> <!-- configuration-class after -->
+              <div class="configuration-test after">
+                <span class="method-name">afterTest</span>
+                <span class="method-start">64 ms</span>
+              </div> <!-- configuration-test after -->
+              <div class="configuration-suite after">
+                <span class="method-name">afterSuite</span>
+                <span class="method-start">126 ms</span>
+              </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
