--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
-  <td>TestNG-methods-1@2129144075</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
-  <td>TestNG-methods-1@2129144075</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
-  <td>TestNG-methods-2@504858437</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>30</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
-  <td>TestNG-methods-1@2129144075</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/01 16:44:48</td>   <td>31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ThreadPooling.executeTest()[pri:0, instance:browserscripts.ThreadPooling@1a482e36]">executeTest</td> 
-  <td>TestNG-methods-2@504858437</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeTest()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsLearn.testCase1()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">testCase1</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsLearn.testCase2()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">testCase2</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeClass()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>103</td> <td title="&lt;&lt;AnnotationsLearn.afterSuite()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterClass()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>40</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterTest()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-17</td> <td title="&gt;&gt;AnnotationsLearn.beforeSuite()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
 </table>
