--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,28 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterClass()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>65</td> <td title="&lt;&lt;AnnotationsLearn.afterSuite()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>2</td> <td>&nbsp;</td><td title="&lt;&lt;AnnotationsLearn.afterTest()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-22</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeClass()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeMethod()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-55</td> <td title="&gt;&gt;AnnotationsLearn.beforeSuite()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-38</td> <td>&nbsp;</td><td title="&gt;&gt;AnnotationsLearn.beforeTest()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsLearn.testCase1()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">testCase1</td> 
+<tr bgcolor="f888f6">  <td>25/02/15 11:38:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dataDrivenTesting.loginTest(java.lang.String,java.lang.String)[pri:0, instance:learnTestNG.dataDrivenTesting@351d00c0]">loginTest</td> 
   <td>main@1995265320</td>   <td></td> </tr>
-<tr bgcolor="f888f6">  <td>25/02/09 19:18:18</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AnnotationsLearn.testCase2()[pri:0, instance:learnTestNG.AnnotationsLearn@2d3379b4]">testCase2</td> 
+<tr bgcolor="f888f6">  <td>25/02/15 11:38:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dataDrivenTesting.loginTest(java.lang.String,java.lang.String)[pri:0, instance:learnTestNG.dataDrivenTesting@351d00c0]">loginTest</td> 
+  <td>main@1995265320</td>   <td></td> </tr>
+<tr bgcolor="f888f6">  <td>25/02/15 11:38:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="dataDrivenTesting.loginTest(java.lang.String,java.lang.String)[pri:0, instance:learnTestNG.dataDrivenTesting@351d00c0]">loginTest</td> 
   <td>main@1995265320</td>   <td></td> </tr>
 </table>
