--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="986f76">  <td>25/02/01 15:11:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="crossBrowserParallel.verifyTitle()[pri:0, instance:browserscripts.crossBrowserParallel@55141def]">verifyTitle</td> 
-  <td>TestNG-tests-1@188523822</td>   <td></td> </tr>
-<tr bgcolor="986f76">  <td>25/02/01 15:11:45</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;crossBrowserParallel.quitbr()[pri:0, instance:browserscripts.crossBrowserParallel@55141def]">&lt;&lt;quitbr</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@188523822</td>   <td></td> </tr>
-<tr bgcolor="986f76">  <td>25/02/01 15:11:41</td>   <td>-4309</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;crossBrowserParallel.setup(java.lang.String)[pri:0, instance:browserscripts.crossBrowserParallel@55141def]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@188523822</td>   <td></td> </tr>
-<tr bgcolor="986f76">  <td>25/02/01 15:11:41</td>   <td>-4309</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;crossBrowserParallel.setup(java.lang.String)[pri:0, instance:browserscripts.crossBrowserParallel@2d1ef81a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@690339675</td>   <td></td> </tr>
-<tr bgcolor="986f76">  <td>25/02/01 15:11:45</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;crossBrowserParallel.quitbr()[pri:0, instance:browserscripts.crossBrowserParallel@2d1ef81a]">&lt;&lt;quitbr</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@690339675</td>   <td></td> </tr>
-<tr bgcolor="986f76">  <td>25/02/01 15:11:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="crossBrowserParallel.verifyTitle()[pri:0, instance:browserscripts.crossBrowserParallel@2d1ef81a]">verifyTitle</td> 
-  <td>TestNG-tests-2@690339675</td>   <td></td> </tr>
+<tr bgcolor="ae8e6e">  <td>25/02/15 16:17:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;crossBrowserParallel.setup(java.lang.String)[pri:0, instance:browserscripts.crossBrowserParallel@7dc19a70]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@949684105</td>   <td></td> </tr>
+<tr bgcolor="ae8e6e">  <td>25/02/15 16:17:39</td>   <td>5260</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;crossBrowserParallel.quitbr()[pri:0, instance:browserscripts.crossBrowserParallel@7dc19a70]">&lt;&lt;quitbr</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@949684105</td>   <td></td> </tr>
+<tr bgcolor="ae8e6e">  <td>25/02/15 16:17:39</td>   <td>5129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="crossBrowserParallel.verifyTitle()[pri:0, instance:browserscripts.crossBrowserParallel@7dc19a70]">verifyTitle</td> 
+  <td>TestNG-tests-1@949684105</td>   <td></td> </tr>
+<tr bgcolor="ae8e6e">  <td>25/02/15 16:17:39</td>   <td>5260</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;crossBrowserParallel.quitbr()[pri:0, instance:browserscripts.crossBrowserParallel@5167f57d]">&lt;&lt;quitbr</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1200470358</td>   <td></td> </tr>
+<tr bgcolor="ae8e6e">  <td>25/02/15 16:17:39</td>   <td>5129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="crossBrowserParallel.verifyTitle()[pri:0, instance:browserscripts.crossBrowserParallel@5167f57d]">verifyTitle</td> 
+  <td>TestNG-tests-2@1200470358</td>   <td></td> </tr>
+<tr bgcolor="ae8e6e">  <td>25/02/15 16:17:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;crossBrowserParallel.setup(java.lang.String)[pri:0, instance:browserscripts.crossBrowserParallel@5167f57d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-2@1200470358</td>   <td></td> </tr>
 </table>
